# maths173

./: CMakeLists.txt  average  average.cpp  choices  choices.cpp  example101  example101.cpp  example102  example102.cpp  example103  example103.cpp  example104  example104.cpp  example105  example105.cpp  example106  example107  example107.cpp  example108  example108.cpp  example109  example109.cpp  example110  example110.cpp  example111  example111.cpp  example112  example113  example113.cpp  example114  example114.cpp  example115  example115.cpp  example116  example116.cpp  example116.h  example117  example117.cpp  height  height.cpp  (+21 more)
Lab10/: main.cpp  us_count.cpp  us_count.h
Lab13/: CMakeLists.txt  matrix.cpp
Project3/: CMakeLists.txt  dictionary.txt  levenshtein  levenshtein.cpp  levenshtein.h  load_dictionary  load_dictionary.cpp  load_dictionary.h  main.cpp  spellcheck  spellcheck.cpp  spellcheck.h
Rational-v0.2/: CMakeLists.txt  Rational.cpp  Rational.h  gcd.cpp  gcd.h  main.cpp
fileTest/: CMakeLists.txt  hello.txt  myfile.txt  states.cpp  states.txt
rational/: CMakeLists.txt  Rational.cpp  Rational.h  main.cpp
sfmlTest/: CMakeLists.txt  MovingCircle.cpp  MovingCircle.h  lab-s.cpp  main.cpp
shape/: CMakeLists.txt  Quadrilateral.cpp  Quadrilateral.h  Rectangle.cpp  Rectangle.h  Rhombus.cpp  Rhombus.h  Square.cpp  Square.h  main.cpp
squareMatrix/: CMakeLists.txt  main.cpp  square_matrix.cpp  square_matrix.h
triangle/: CMakeLists.txt  triangle.cpp
untitled/: CMakeLists.txt  Complex.cpp  Complex.h  Totaler.cpp  dataset.cpp  main.cpp
(+10 files in other folders)
