cmake_minimum_required(VERSION 3.26)
project(Math173)

set(CMAKE_CXX_STANDARD 17)

add_executable(Math173 main.cpp
        print.cpp
        project01.cpp
        lab01.cpp
        example101.cpp
        square.cpp
        quack.cpp
        example102.cpp
        example103.cpp
        height.cpp
        example104.cpp
        example105.cpp
        example107.cpp
        example108.cpp
        example110.cpp
        print_stars.cpp
        example113.cpp
        average.cpp
        reverse.cpp
        is_leap_year.cpp
        example114.cpp
        example115.cpp
        choices.cpp
)
